apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus-svc
  namespace: monitoring
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: gatus
  type: ClusterIP
